--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,7 @@
   </header>
   <main>
     <p>Thanks for visiting my site. Explore my work and get in touch!</p>
-    <img src="homeimage.WEBP" alt="Welcome image">
+    <img src="homeimage.webp" alt="Welcome image">
   </main>
   <footer>
     <p>&copy; 2025moses !!</p>
